--- a/posse-3rd-laravel-study_env/web/etc/nginx/conf.d/default.conf
+++ b/posse-3rd-laravel-study_env/web/etc/nginx/conf.d/default.conf
@@ -26,7 +26,7 @@ server {
         fastcgi_pass  phpfpm:9000;
         fastcgi_index index.php;    
         fastcgi_param SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        include       fastcgi_params
+        include       fastcgi_params;
     }
 
     location ~ /\.(?!well-known).* {
